<resources>
    <string name="app_name">Pocast</string>
    <string name="app_subtitle">Search for Podcast app ends here</string>
    <string name="google">Sign in with Google</string>

    <string name="minimal">Minimal</string>
    <string name="subscribe">Subscribe</string>
    <string name="offline">Offline</string>
    <string name="playlist">Playlist</string>


    <string name="minimal_subtext">Really clean and minimal interface that will make you relax and listen to your favorite podcasts.</string>
    <string name="subscribe_subtext">Subscibe to your favorite channels to keep updated with its latest podcasts.</string>
    <string name="offline_subtext">Save the podcasts to play them offline, anytime, anywhere.</string>
    <string name="playlist_subtext">Create playlists from various podcasts.</string>


    <string name="start">Start</string>
    <string name="title_activity_activity_main">" "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
