<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pocastviolet"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deepakbaliga.pocast.ActivityLogin">

    <ImageView
        android:id="@+id/imageview_pocastlogo"
        android:layout_width="@dimen/intro_logo_size"
        android:layout_height="@dimen/intro_logo_size"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/intro_logo_bottom"
        android:layout_marginTop="@dimen/intro_logo_top"
        android:src="@drawable/pocast_logo" />

    <TextView
        android:id="@+id/textview_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_pocastlogo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/intro_title_text_size" />

    <TextView
        android:id="@+id/textview_app_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_app_title"
        android:layout_centerHorizontal="true"
        android:text="@string/app_subtitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/intro_subtitle_text_size" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/thin_border_round_corner"
        android:text="@string/google"
        android:textColor="@color/white"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:layout_marginBottom="@dimen/intro_logo_bottom" />


</RelativeLayout>
